# substrate-telemetry-client-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/substrate_telemetry_client/: __init__.py  async_client.py  client.py  constants.py  core.py  exceptions.py  types.py
